# picture-description-pipeline

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt  streamlit_app.py
docs/plans/: 2026-02-20-refactor-design.md  2026-02-20-refactor-plan.md  2026-02-27-ui-polish-design.md  2026-02-27-ui-polish.md
docs/superpowers/plans/: 2026-03-21-doctags-generation.md  2026-03-21-multipage-qa.md
docs/superpowers/specs/: 2026-03-20-image-segmentation-design.md  2026-03-21-doctags-generation-design.md  2026-03-21-multipage-qa-design.md
pages/: doctags.py  qa.py  segmentation.py
pipeline/: __init__.py  config.py  doctags.py  output.py  qa.py  segmentation.py
src/pipeline/: config.py  output.py
tests/: test_config.py  test_doctags.py  test_output.py  test_qa.py  test_segmentation.py
