[project]
name = "granite-vision-pipeline"
version = "0.2.0"
description = "Extract and describe pictures and tables in PDF documents using IBM Granite Vision"
requires-python = ">=3.12"
dependencies = [
    "docling[vlm]",
    "streamlit",
    "torch",
    "transformers",
]

[dependency-groups]
dev = [
    "pytest",
    "ruff",
    "ty",
]

[tool.uv]
override-dependencies = ["opencv-python-headless>=4.6"]
constraint-dependencies = ["opencv-python<0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff.lint.per-file-ignores]
"pipeline/config.py" = ["E402"]

[tool.hatch.build.targets.wheel]
packages = ["pipeline"]
